--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@ Fri Oct 17 20:38:09 CDT 2014
 .gradle/
 gradle/
 build/
+
+# see https://github.com/github/gitignore
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
