--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:+'
+    // See: http://lwjgl.org/
+    compile 'org.lwjgl.lwjgl:lwjgl:+'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
