--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ apply plugin: 'checkstyle'
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
+version = '0.1.0'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
@@ -23,6 +25,8 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:+'
+    compile 'org.slf4j:slf4j-simple:+'
+
     // See: http://lwjgl.org/
     compile 'org.lwjgl.lwjgl:lwjgl:+'
 
@@ -36,3 +40,14 @@ dependencies {
 checkstyle {
     configFile = new File("$rootDir/src/main/resources", "checkstyle.xml")
 }
+
+jar {
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    manifest {
+        attributes("Implementation-Title": "chat",
+                   "Implementation-Version": version,
+                   "Main-Class": "com.ninjacave.lwjgl.basics.DisplayExample")
+    }
+}
+
+//'-Djava.library.path=/'
