Added source and target compatibility properties.
Setting to latest version of Java, which is 1.8 as of 2014-10-27.

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@
 apply plugin: 'checkstyle'
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+// Start Java Plugin Specific variables
+def javaVersion=1.8
+sourceCompatibility=javaVersion
+targetCompatibility=javaVersion
+// End Java Plugin Specific variables
 
 // In this section you declare where to find the dependencies of your project
 repositories {
