Refactored example code and added input example.
See http://www.lwjgl.org/wiki/index.php?title=LWJGL_Basics_1_(The_Display) and http://lwjgl.org/wiki/index.php?title=LWJGL_Basics_2_(Input).

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ jar {
     manifest {
         attributes("Implementation-Title": "chat",
                    "Implementation-Version": version,
-                   "Main-Class": "com.ninjacave.lwjgl.basics.DisplayExample")
+                   "Main-Class": "com.ninjacave.lwjgl.basics.InputExample")
     }
 }
 
