--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,10 @@
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
+*.gradle        text
+*.java          text
+*.properties    text
+*.xml           text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
