--- a/build.gradle
+++ b/build.gradle
@@ -75,23 +75,54 @@ checkstyle {
 }
 
 jar {
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    dependsOn configurations.runtime
+
+    def getRuntimeDependencyEntities = { configurations.runtime.resolve() }                // list of included dependencies
+    def entityNames = { it.isDirectory() ? it.name : it.name[0..<it.name.lastIndexOf('.')] }  // internal directory name is source directory name or jar file name (sans .jar)
+
+    manifest {
+        attributes('Implementation-Title'   : 'chat',
+                   'Implementation-Version' : version,
+                   'Main-Class'             : mainClassName,
+                   'Class-Path'             : getRuntimeDependencyEntities().collect { entityNames(it) } // set classpath to list of internal directories created
+        )
+    }
+    def pattern = ~"(.*-natives-windows|.*-natives-linux)"
+    // copy each dependency into separate internal directory
+    doFirst {
+        getRuntimeDependencyEntities().each {
+            def dependencyDestination = entityNames(it)
+            logger.lifecycle(dependencyDestination)
+            if (it.isDirectory()) {
+                from(it) {
+                    into dependencyDestination
+                }
+            } else {
+                if (pattern.matcher(it.getName())) {
+
+                } else {
+                    from (zipTree(it)) {
+                        /**
+                        exclude 'jinput-platform-.*-natives-windows'
+                        exclude 'jinput-platform-.*-natives-linux'
+                        exclude 'lwjgl-platform-.*-natives-windows'
+                        exclude 'lwjgl-platform-.*-natives-linux'
+                         */
+                         // remove manifests and the security files from jar contents.
+                        exclude 'META-INF/MANIFEST.MF'
+                        exclude 'META-INF/*.SF'
+                        exclude 'META-INF/*.DSA'
+                        exclude 'META-INF/*.RSA'
+                        //
+                        into dependencyDestination
+                    }
+                }
+            }
+        }
+    }
 }
 
-jar {
-    dependsOn configurations.runtime
-    from {
-        configurations.compile.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    } {
-    }
-    manifest {
-        attributes('Implementation-Title': 'chat',
-                   'Implementation-Version': version,
-                   'Main-Class': mainClassName)
-    }
-}
+
 platforms.each { platform ->
     task "${platform}Natives" {
         def outputDir = "$buildDir/natives/$platform"
@@ -109,10 +140,12 @@ platforms.each { platform ->
         }
     }
 }
+
 task natives {
     description 'Copies native libraries to an appropriate directory.'
     dependsOn platforms.collect { "${it}Natives" }.findAll { tasks[it] }
 }
+
 // see http://forums.gradle.org/gradle/topics/how_to_use_lwjgl_or_how_to_use_native_libraries#reply_7849654
 //'-Djava.library.path=/'
 /*
